--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: #9E9E9E;
+  margin: 0;
+  padding: 0;
+}
