--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -3,7 +3,7 @@
     margin: auto;
     border: 1px solid #ddd;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    height: 100%;
+    height: 85%;
     display: flex;
     flex-direction: column;
     background-color: #f9f9f9;
@@ -43,7 +43,7 @@
 .chat-input button {
     border: none;
     padding: 10px;
-    background-color: #61dafb;
+    background-color: #65b7cc;
     color: white;
     cursor: pointer;
 }
