--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -6,7 +6,9 @@
     height: 85%;
     display: flex;
     flex-direction: column;
-    background-color: #f9f9f9;
+    padding: 5px;
+    width: calc(100% - 10px);
+    box-sizing: border-box;
 }
 
 .chat-window {
@@ -47,6 +49,7 @@
     color: white;
     cursor: pointer;
 }
-.buttonrate{
+
+.buttonrate {
     background-color: pink;
 }
