--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -6,10 +6,10 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-    }
-    
-    .popup-inner {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-inner {
     background-color: white;
     position: absolute;
     left: 50%;
@@ -17,29 +17,29 @@
     transform: translate(-50%, -50%);
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     width: 40%;
-    }
-    
-    .popup-inner h2 {
+}
+
+.popup-inner h2 {
     margin-top: 0;
-    }
-    
-    .popup-inner label {
+}
+
+.popup-inner label {
     display: block;
-    margin-bottom: 10px;
-    }
-    
-    .popup-inner input {
+    color: #65b7cc;
+}
+
+.popup-inner input {
     width: 100%;
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 10px;
-    }
-    
-    .popup-inner button[type="submit"],
-    .popup-inner button[type="button"] {
+}
+
+.popup-inner button[type="submit"],
+.popup-inner button[type="button"] {
     background-color: #65b7cc;
     color: white;
     border: none;
@@ -51,48 +51,48 @@
     margin-right: 10px;
     cursor: pointer;
     border-radius: 5px;
-    }
-    
-    .popup-inner button[type="submit"]:hover,
-    .popup-inner button[type="button"]:hover {
+}
+
+.popup-inner button[type="submit"]:hover,
+.popup-inner button[type="button"]:hover {
     background-color: #36def4;
-    }
-    
-    .popup-inner button[type="submit"] {
+}
+
+.popup-inner button[type="submit"] {
     margin-top: 20px;
-    }
-    
-    .popup-inner button[type="button"] {
+}
+
+.popup-inner button[type="button"] {
     margin-top: 20px;
     background-color: #f44336;
-    }
-    
-    .popup-inner button[type="button"]:hover {
+}
+
+.popup-inner button[type="button"]:hover {
     background-color: #da190b;
-    }
-    
-    .popup-inner button[type="submit"]:disabled {
+}
+
+.popup-inner button[type="submit"]:disabled {
     background-color: #bfbfbf;
     color: #ffffff;
     cursor: not-allowed;
-    }
-    
-    .popup-inner button[type="button"]:disabled {
+}
+
+.popup-inner button[type="button"]:disabled {
     background-color: #bfbfbf;
     color: #ffffff;
     cursor: not-allowed;
     position: fixed;
     right: 4px;
     top: 4px;
-    }
+}
 
-    .buttonclose {
+.buttonclose {
     position: fixed;
     background-color: rgb(241, 126, 126);
     right: 4px;
     top: 4px;
-    }
+}
 
-    .errmessage {
-        color:#da190b
-    }
+.errmessage {
+    color: #da190b
+}
