--- a/frontend/src/footer.css
+++ b/frontend/src/footer.css
@@ -1,10 +1,11 @@
 .footerchat {
     color: white;
-    text-align: left;
-    padding: 20px;
-    position: fixed;
-    bottom: 0;
     width: 100%;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: smaller;
 }
 
 .footerchat h1 {
